# nautobot-app-version-control

./: .bandit.yml  .cookiecutter.json  .gitignore  .pydocstyle.ini  .readthedocs.yaml  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-lint-unittest.yaml  ci.yml  github-actions-demo.yaml  upstream_testing.yml
changes/: 210.housekeeping
development/: Dockerfile  Dockerfile-dolt  creds.example.env  creds_hosted.example.env  dev.env  development.env  docker-compose.base-hosted.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.dolt-hosted.yml  docker-compose.dolt.yml  docker-compose.hosted-base.yml  docker-compose.requirements-hosted.yml  docker-compose.requirements.yml  docker-compose.test.yml  dolt-config.yaml  nautobot_config.py  zach-repro.sh
docs/: conf.py  contributing.md  design.md  index.md  requirements.txt  version-control-operations.md
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_1.0.md
docs/dev/: arch_decision.md  contributing.md  design.md  dev_environment.md
docs/dev/code_reference/: api.md  package.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  common_workflows.md  faq.md
docs/workflows/: common_workflows.md
dolt/: __init__.py  admin.py  banner.py  constants.py  context_managers.py  custom_validators.py  datasources.py  diffs.py  filters.py  forms.py  functions.py  merge.py  middleware.py  models.py  navigation.py  routers.py  tables.py  template_content.py  tests.py  urls.py  utils.py  versioning.py  views.py
dolt/api/: serializers.py  urls.py  views.py
dolt/diff/: diffs.py  factory.py  model_view_map.py  util.py  view_tables.py
dolt/dynamic/: conflict_factory.py  diff_factory.py  diffs.py  model_view_map.py
dolt/graphql/: types.py
dolt/management/commands/: cleanup_data.py
dolt/migrations/: 0001_initial.py  0002_branchmeta.py  0002_commitancestor.py  0003_conflicts.py  0004_constraintviolations.py  0005_pullrequest_pullrequestreview.py  0005_pullrequest_pullrequestreview_pullrequestreviewcomment.py  0005_pullrequest_pullrequestreviewcomments_pullrequestreviews.py  0006_auto_20210809_2030.py  0006_auto_20210810_2245.py  0006_auto_20210817_0251.py  0007_auto_20210818_1708.py  __init__.py
dolt/templates/dolt/: branch.html  branch_bulk_delete.html  branch_merge_preview.html  commit.html  commit_list.html  commit_revert.html  conflicts.html  conflicts_panel.html  diff_detail.html  diff_panel.html  diffs.html  pull_request.html  pull_request_bulk_delete.html  pull_request_list.html
dolt/templates/dolt/pull_request/: base.html  commit_list.html  commits.html  confirm_close.html  confirm_merge.html  conflict_list.html  conflict_summary.html  conflicts.html  detail.html  diffs.html  edit.html  review_list.html
my_app/: __init__.py
my_app/tests/: __init__.py  test_api.py
nautobot-plugin-workflow-dolt/: __init__.py  apps.py  filters.py  forms.py  middleware.py  models.py  querysets.py  tables.py  urls.py  views.py
nautobot-plugin-workflow-dolt/api/: urls.py  views.py
nautobot-plugin-workflow-dolt/diff/: factory.py  util.py
nautobot-plugin-workflow-dolt/templates/nautobot-plugin-workflow-dolt/: branch.html  branch_edit.html  branch_merge.html  diff_panel.html  diffs.html
nautobot_dolt/: __init__.py  constants.py  context_managers.py  filters.py  forms.py  middleware.py  models.py  navigation.py  querysets.py  tables.py  urls.py  views.py
nautobot_dolt/api/: serializers.py  urls.py  views.py
nautobot_dolt/diff/: factory.py  util.py
nautobot_dolt/migrations/: 0001_initial.py
nautobot_dolt/templates/nautobot-plugin-workflow-dolt/: branch_list.html  commit.html
nautobot_dolt/templates/nautobot_dolt/: branch.html  branch_list.html  branch_merge.html  branch_merge_preview.html  commit.html  diffs.html
nautobot_version_control/: __init__.py  banner.py  diffs.py  filters.py  forms.py  functions.py  jobs.py  merge.py  middleware.py  models.py  navigation.py  routers.py  tables.py  tests.py  urls.py  utils.py  views.py
nautobot_version_control/api/: __init__.py  serializers.py  urls.py  views.py
nautobot_version_control/dynamic/: __init__.py  diff_factory.py
nautobot_version_control/management/commands/: cleanup_data.py
nautobot_version_control/migrations/: 0001_initial.py  0002_branchmeta.py  0003_conflicts.py  0004_constraintviolations.py  0005_pullrequest_pullrequestreview.py  0006_auto_20210817_0251.py  0007_auto_20210818_1708.py  0008_charfield_max_length.py  __init__.py
nautobot_version_control/templates/nautobot_version_control/: branch.html  branch_bulk_delete.html  branch_merge.html  branch_merge_preview.html  commit.html  commit_edit.html  commit_list.html  commit_revert.html  conflicts.html  diff_detail.html  diffs.html  pull_request_list.html
nautobot_version_control/templates/nautobot_version_control/pull_request/: base.html  commits.html  confirm_merge.html  conflict_summary.html  conflicts.html  diffs.html  edit.html  review_edit.html  review_list.html
nautobot_version_control/tests/: __init__.py  test_api.py  test_basic.py  test_doltapi.py  test_version_control.py
