[tool.poetry]
name = "dolt"
version = "0.1.0"
description = ""
authors = ["Andy Arthur <andy@dolthub.com>"]
license = "LICENSE.txt"

[tool.poetry.dependencies]
python = "^3.6"
nautobot = "^1.1.0"
mysqlclient = "^2.0.3"
django-debug-toolbar = "^3.2.2"

[tool.poetry.dev-dependencies]
invoke = "*"
black = "*"
yamllint = "*"
bandit = "*"
pylint = "*"
pydocstyle = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
